tests/type-errors/decl_no_asset_option.arl
archetype decl_no_asset_option

asset my_asset {
  id : string;
}

variable a : option<my_asset> = none

entry exec() {
  effect {
    ()
  }
}
